# invest_calculator_marimo

./: .gitignore  AGENTS.md  opencode.json  pyproject.toml
.github/scripts/: build.py
apps/: dashboard_stock_investement.py  dashboard_stock_investment.py
apps/layouts/: dashboard_stock_investement.grid.json  dashboard_stock_investment.grid.json
notebooks/: penguins.py
