[project]
name = "marimo-invest-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6",
    "google-genai>=1.68.0",
    "marimo[lsp]>=0.21.1",
    "numpy>=2.4",
    "polars>=1.36",
    "pydantic-ai-slim>=1.70.0",
    "ruff",
]

[dependency-groups]
dev = [
    "mcp>=1",
    "openai>=2.29.0",
    "pydantic>=2",
]
